--- a/index.html
+++ b/index.html
@@ -5,35 +5,47 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WebStudio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
 
   <body>
     <!--Header-->
-    <header class="page-header">
-      <nav class="main-nav">
-        <a class="link" lang="en" href="./index.html"> <span class="color-log">Web</span>Studio</a>
+    <header class="header">
+      <nav class="header-nav">
+        <a class="htader-logo link" lang="en" href="./index.html">
+          <span class="color-log">Web</span>Studio</a
+        >
 
-        <ul class="list" lang="ru">
-          <li><a class="link-item" href="">Студия</a></li>
-          <li><a class="link-item" href="./portfolio.html">Портфолио</a></li>
-          <li><a class="link-item" href="">Контакты</a></li>
+        <ul class="list header-list" lang="ru">
+          <li class="header-item">
+            <a class="link header-link" href="">Студия</a>
+          </li>
+          <li class="header-item">
+            <a class="link header-link" href="./portfolio.html">Портфолио</a>
+          </li>
+          <li class="header-item">
+            <a class="link header-link" href="">Контакты</a>
+          </li>
         </ul>
       </nav>
 
       <!--contacts sections -->
       <div>
-        <a class="contact-list" href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <a class="header-mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
       </div>
       <div>
-        <a class="contact-tel" href="tel:+380961111111">+380961111111</a>
+        <a class="header-tel" href="tel:+380961111111">+380961111111</a>
       </div>
-    </header>
-
-    <main>
       <!--section button-->
-      <section class="section">
-        <h1 class="section-tittle">
+      <section class="section-banner">
+        <h1 class="section-title">
           Эффективные решения <br />
           для вашего бизнеса
         </h1>
@@ -41,35 +53,38 @@
         <!--button-->
         <button type="button" class="button">Заказать услугу</button>
       </section>
+    </header>
 
-      <!--section description-->
-      <section class="section">
+    <!--section description-->
+    <main>
+      <section class="hero">
         <h2 hidden>CEO</h2>
-        <ul class="list">
-          <li>
-            <h2 class="about-tittle">Внимание к деталям</h2>
-            <p class="tittle-description">
+
+        <ul class="list hero-list">
+          <li class="hero-item">
+            <h2 class="hero-title">Внимание к деталям</h2>
+            <p class="hero-after-title">
               Идейные соображения, а также начало повседневной работы по формированию позиции.
             </p>
           </li>
 
-          <li>
-            <h2 class="about-tittle">Пунктуальность</h2>
-            <p class="tittle-description">
+          <li class="hero-item">
+            <h2 class="hero-title">Пунктуальность</h2>
+            <p class="hero-after-title">
               Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
             </p>
           </li>
 
-          <li>
-            <h2 class="about-tittle">Планирование</h2>
-            <p class="tittle-description">
+          <li class="hero-item">
+            <h2 class="hero-title">Планирование</h2>
+            <p class="hero-after-title">
               Равным образом консультация с широким активом в значительной степени обуславливает.
             </p>
           </li>
 
-          <li>
-            <h2 class="about-tittle">Современные технологии</h2>
-            <p class="tittle-description">
+          <li class="hero-item">
+            <h2 class="hero-title">Современные технологии</h2>
+            <p class="hero-after-title">
               Значимость этих проблем настолько очевидна, что реализация плановых заданий.
             </p>
           </li>
@@ -77,8 +92,8 @@
       </section>
 
       <!--Our work section-->
-      <section>
-        <h2 class="sectio-work">Чем мы занимаемся</h2>
+      <section class="section-work">
+        <h2 class="work-title">Чем мы занимаемся</h2>
         <ul class="list">
           <li>
             <img src="./images/photo1.png" alt="" />
@@ -95,29 +110,29 @@
       <!--section team-->
       <div>
         <section>
-          <h2 class="my-team">Наша команда</h2>
+          <h2 class="team-title">Наша команда</h2>
           <ul class="list">
             <li>
               <img src="./images/team1.png" alt="" />
-              <h3 class="team-name">Игорь Демьяненко</h3>
+              <h3 class="team-name-title">Игорь Демьяненко</h3>
               <p class="team-description">Product Designer</p>
             </li>
 
             <li>
               <img src="./images/team2.png" alt="" />
-              <h3 class="team-name">Ольга Репина</h3>
+              <h3 class="team-name-title">Ольга Репина</h3>
               <p class="team-description">Frontend Developer</p>
             </li>
 
             <li>
               <img src="./images/team3.png" alt="" />
-              <h3 class="team-name">Николай Тарасов</h3>
+              <h3 class="team-name-title">Николай Тарасов</h3>
               <p class="team-description">Marketing</p>
             </li>
 
             <li>
               <img src="./images/team4.png" alt="" />
-              <h3 class="team-name">Михаил Ермаков</h3>
+              <h3 class="team-name-title">Михаил Ермаков</h3>
               <p class="team-description">UI Designer</p>
             </li>
           </ul>
@@ -140,7 +155,7 @@
               >
             </li>
             <li>
-              <a class="contact-list" href="mailto:info@devstudio.com">info@example.com</a>
+              <a class="contact-mail" href="mailto:info@devstudio.com">info@example.com</a>
             </li>
             <li>
               <a class="contact-tel" href="tel:+380961111111">+380991111111</a>
