Закончил css Portfolio

--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
     <!--Header-->
     <header class="header">
       <nav class="header-nav">
-        <a class="htader-logo link" lang="en" href="./index.html">
+        <a class="header-logo link" lang="en" href="./index.html">
           <span class="color-log">Web</span>Studio</a
         >
 
         <ul class="list header-list" lang="ru">
           <li class="header-item">
-            <a class="link header-link" href="">Студия</a>
+            <a class="link header-link active-page" href="">Студия</a>
           </li>
           <li class="header-item">
             <a class="link header-link" href="./portfolio.html">Портфолио</a>
