--- a/portfolio.html
+++ b/portfolio.html
@@ -5,26 +5,41 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Psortfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
 
   <body>
     <!--Header portfolio-->
-    <header>
-      <nav>
-        <a lang="en" href="/">WebStudio</a>
-        <ul lang="ru">
-          <li class="link"><a href="./index.html">Студия</a></li>
-          <li><a href="">Портфолио</a></li>
-          <li><a href="">Контакты</a></li>
+    <header class="header-portfolio">
+      <nav class="header-nav">
+        <a class="header-logo link" lang="en" href="./index.html">
+          <span class="color-log">Web</span>Studio</a
+        >
+        <ul class="list header-list" lang="ru">
+          <li class="header-item link">
+            <a class="link header-link" href="./index.html">Студия</a>
+          </li>
+          <li class="header-item">
+            <a class="link header-link active-page" href="">Портфолио</a>
+          </li>
+          <li class="header-item">
+            <a class="link header-link" href="">Контакты</a>
+          </li>
         </ul>
       </nav>
 
       <!--contacts sections -->
       <div>
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <a class="header-mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
       </div>
       <div>
-        <a href="tel:+380961111111">+380961111111</a>
+        <a class="header-tel" href="tel:+380961111111">+380961111111</a>
       </div>
     </header>
 
@@ -33,9 +48,9 @@
       <section>
         <h2 hidden>content</h2>
         <a lang="ru"></a>
-        <ul class="filter-button">
+        <ul class="list">
           <li class="item">
-            <button class="filter-button" type="button">Все</button>
+            <button class="filter-button btn-blu" type="button">Все</button>
           </li>
           <li class="item">
             <button class="filter-button" type="button">Веб-сайты</button>
@@ -54,72 +69,73 @@
 
       <!--Projectы-->
       <div>
-        <section>
-          <ul>
-            <li class="protfolio-gallery">
+        <section class="hero">
+          <ul class="list hero-list">
+            <li class="hero-item">
               <img src="./images/portfolio/portfolio1.png" alt="" width="370" />
-              <h2>Технокряк</h2>
-              <p>Веб-сайт</p>
+              <h2 class="hero-title">Технокряк</h2>
+              <p class="hero-after-title">Веб-сайт</p>
             </li>
 
-            <li class="protfolio-gallery">
+            <li class="hero-item">
               <img src="./images/portfolio/portfolio2.png" alt="" width="370" />
-              <h2>Постер New Orlean vs Golden Star</h2>
-              <p>Дизайн</p>
+              <h2 class="hero-title">Постер New Orlean vs Golden Star</h2>
+              <p class="hero-after-title">Дизайн</p>
             </li>
 
-            <li class="protfolio-gallery">
+            <li class="hero-item">
               <img src="./images/portfolio/portfolio3.png" alt="" width="370" />
-              <h2>Ресторан Seafood</h2>
-              <p>Приложение</p>
+              <h2 class="hero-title">Ресторан Seafood</h2>
+              <p class="hero-after-title">Приложение</p>
             </li>
 
-            <li class="protfolio-gallery">
+            <li class="hero-item">
               <img src="./images/portfolio/portfolio4.png" alt="" width="370" />
-              <h2>Проект Prime</h2>
-              <p>Маркетинг</p>
+              <h2 class="hero-title">Проект Prime</h2>
+              <p class="hero-after-title">Маркетинг</p>
             </li>
 
-            <li class="protfolio-gallery">
+            <li class="hero-item">
               <img src="./images/portfolio/portfolio5.png" alt="" width="370" />
-              <h2>Проект Boxes</h2>
-              <p>Приложение</p>
+              <h2 class="hero-title">Проект Boxes</h2>
+              <p class="hero-after-title">Приложение</p>
             </li>
 
-            <li class="protfolio-gallery">
+            <li class="hero-item">
               <img src="./images/portfolio/portfolio6.png" alt="" width="370" />
-              <h2>Inspiration has no Borders</h2>
-              <p>Веб-сайт</p>
+              <h2 class="hero-title">Inspiration has no Borders</h2>
+              <p class="hero-after-title">Веб-сайт</p>
             </li>
 
-            <li class="protfolio-gallery">
+            <li class="hero-item">
               <img src="./images/portfolio/portfolio7.png" alt="" width="370" />
               <h2>Издание Limited Edition</h2>
-              <p>Дизайн</p>
+              <p class="hero-after-title">Дизайн</p>
             </li>
-            <li class="protfolio-gallery">
+            <li class="hero-item">
               <img src="./images/portfolio/portfolio8.png" alt="" width="370" />
-              <h2>Проект LAB</h2>
-              <p>Маркетинг</p>
+              <h2 class="hero-title">Проект LAB</h2>
+              <p class="hero-after-title">Маркетинг</p>
             </li>
 
-            <li class="protfolio-gallery">
+            <li class="hero-item">
               <img src="./images/portfolio/portfolio9.png" alt="" width="370" />
-              <h2>Growing Business</h2>
-              <p>Приложение</p>
+              <h2 class="hero-title">Growing Business</h2>
+              <p class="hero-after-title">Приложение</p>
             </li>
           </ul>
         </section>
       </div>
     </main>
-    <!--footer portfolio-->
-    <footer>
-      <a href="/index.html">WebStudio</a>
+    <!--footer section-->
+    <footer class="section-footer">
+      <a class="link-footer" href="/index.html">Web<span class="color-footer">Studio</span></a>
       <div>
         <address>
-          <ul>
+          <ul class="list">
             <li>
               <a
+                class="address"
                 href="https://goo.gl/maps/Afqt2rmy2DsJCTwLA"
                 target="_blank"
                 rel="noopener noreferre"
@@ -127,10 +143,10 @@
               >
             </li>
             <li>
-              <a href="mailto:info@devstudio.com">info@example.com</a>
+              <a class="contact-mail" href="mailto:info@devstudio.com">info@example.com</a>
             </li>
             <li>
-              <a href="tel:+380961111111">+380991111111</a>
+              <a class="contact-tel" href="tel:+380961111111">+380991111111</a>
             </li>
           </ul>
         </address>
