--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,7 @@
     <!--Header portfolio-->
     <header class="header-portfolio">
       <nav class="header-nav">
-        <a class="header-logo link" lang="en" href="./index.html">
+        <a class="header-logo link link-studio" lang="en" href="./index.html">
           <span class="color-log">Web</span>Studio</a
         >
         <ul class="list header-list" lang="ru">
@@ -36,10 +36,10 @@
 
       <!--contacts sections -->
       <div>
-        <a class="header-mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <a class="header-contact" href="mailto:info@devstudio.com">info@devstudio.com</a>
       </div>
       <div>
-        <a class="header-tel" href="tel:+380961111111">+380961111111</a>
+        <a class="header-contact" href="tel:+380961111111">+380961111111</a>
       </div>
     </header>
 
@@ -67,61 +67,73 @@
         </ul>
       </section>
 
-      <!--Projectы-->
+      <!--Projects-->
       <div>
-        <section class="hero">
-          <ul class="list hero-list">
-            <li class="hero-item">
-              <img src="./images/portfolio/portfolio1.png" alt="" width="370" />
-              <h2 class="hero-title">Технокряк</h2>
-              <p class="hero-after-title">Веб-сайт</p>
+        <section class="section-cardset">
+          <ul class="list cardset-list">
+            <li class="cardset-item-portfolio">
+              <img src="./images/portfolio/portfolio1.png" alt="Технокряк" width="370" />
+              <h2 class="cardset-title">Технокряк</h2>
+              <p class="cardset-after-title">Веб-сайт</p>
             </li>
 
-            <li class="hero-item">
-              <img src="./images/portfolio/portfolio2.png" alt="" width="370" />
-              <h2 class="hero-title">Постер New Orlean vs Golden Star</h2>
-              <p class="hero-after-title">Дизайн</p>
+            <li class="cardset-item-portfolio">
+              <img
+                src="./images/portfolio/portfolio2.png"
+                alt="Постер New Orlean vs Golden Star"
+                width="370"
+              />
+              <h2 class="cardset-title">Постер New Orlean vs Golden Star</h2>
+              <p class="cardset-after-title">Дизайн</p>
             </li>
 
-            <li class="hero-item">
-              <img src="./images/portfolio/portfolio3.png" alt="" width="370" />
-              <h2 class="hero-title">Ресторан Seafood</h2>
-              <p class="hero-after-title">Приложение</p>
+            <li class="cardset-item-portfolio">
+              <img src="./images/portfolio/portfolio3.png" alt="Ресторан Seafood" width="370" />
+              <h2 class="cardset-title">Ресторан Seafood</h2>
+              <p class="cardset-after-title">Приложение</p>
             </li>
 
-            <li class="hero-item">
-              <img src="./images/portfolio/portfolio4.png" alt="" width="370" />
-              <h2 class="hero-title">Проект Prime</h2>
-              <p class="hero-after-title">Маркетинг</p>
+            <li class="cardset-item-portfolio">
+              <img src="./images/portfolio/portfolio4.png" alt="Проект Prime" width="370" />
+              <h2 class="cardset-title">Проект Prime</h2>
+              <p class="cardset-after-title">Маркетинг</p>
             </li>
 
-            <li class="hero-item">
-              <img src="./images/portfolio/portfolio5.png" alt="" width="370" />
-              <h2 class="hero-title">Проект Boxes</h2>
-              <p class="hero-after-title">Приложение</p>
+            <li class="cardset-item-portfolio">
+              <img src="./images/portfolio/portfolio5.png" alt="Проект Boxes" width="370" />
+              <h2 class="cardset-title">Проект Boxes</h2>
+              <p class="cardset-after-title">Приложение</p>
             </li>
 
-            <li class="hero-item">
-              <img src="./images/portfolio/portfolio6.png" alt="" width="370" />
-              <h2 class="hero-title">Inspiration has no Borders</h2>
-              <p class="hero-after-title">Веб-сайт</p>
+            <li class="cardset-item-portfolio">
+              <img
+                src="./images/portfolio/portfolio6.png"
+                alt="Inspiration has no Borders"
+                width="370"
+              />
+              <h2 class="cardset-title">Inspiration has no Borders</h2>
+              <p class="cardset-after-title">Веб-сайт</p>
             </li>
 
-            <li class="hero-item">
-              <img src="./images/portfolio/portfolio7.png" alt="" width="370" />
+            <li class="cardset-item-portfolio">
+              <img
+                src="./images/portfolio/portfolio7.png"
+                alt="Издание Limited Edition"
+                width="370"
+              />
               <h2>Издание Limited Edition</h2>
-              <p class="hero-after-title">Дизайн</p>
+              <p class="cardset-after-title">Дизайн</p>
             </li>
-            <li class="hero-item">
-              <img src="./images/portfolio/portfolio8.png" alt="" width="370" />
-              <h2 class="hero-title">Проект LAB</h2>
-              <p class="hero-after-title">Маркетинг</p>
+            <li class="cardset-item-portfolio">
+              <img src="./images/portfolio/portfolio8.png" alt="Проект LAB" width="370" />
+              <h2 class="cardset-title">Проект LAB</h2>
+              <p class="cardset-after-title">Маркетинг</p>
             </li>
 
-            <li class="hero-item">
-              <img src="./images/portfolio/portfolio9.png" alt="" width="370" />
-              <h2 class="hero-title">Growing Business</h2>
-              <p class="hero-after-title">Приложение</p>
+            <li class="cardset-item-portfolio">
+              <img src="./images/portfolio/portfolio9.png" alt="Growing Business" width="370" />
+              <h2 class="cardset-title">Growing Business</h2>
+              <p class="cardset-after-title">Приложение</p>
             </li>
           </ul>
         </section>
@@ -143,10 +155,10 @@
               >
             </li>
             <li>
-              <a class="contact-mail" href="mailto:info@devstudio.com">info@example.com</a>
+              <a class="contact-list" href="mailto:info@devstudio.com">info@example.com</a>
             </li>
             <li>
-              <a class="contact-tel" href="tel:+380961111111">+380991111111</a>
+              <a class="contact-list" href="tel:+380961111111">+380991111111</a>
             </li>
           </ul>
         </address>
