--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!--Header-->
     <header class="header">
       <nav class="header-nav">
-        <a class="header-logo link" lang="en" href="./index.html">
+        <a class="header-logo link link-studio" lang="en" href="./index.html">
           <span class="color-log">Web</span>Studio</a
         >
 
@@ -38,10 +38,10 @@
 
       <!--contacts sections -->
       <div>
-        <a class="header-mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <a class="header-contact" href="mailto:info@devstudio.com">info@devstudio.com</a>
       </div>
       <div>
-        <a class="header-tel" href="tel:+380961111111">+380961111111</a>
+        <a class="header-contact" href="tel:+380961111111">+380961111111</a>
       </div>
       <!--section button-->
       <section class="section-banner">
@@ -96,13 +96,13 @@
         <h2 class="work-title">Чем мы занимаемся</h2>
         <ul class="list">
           <li>
-            <img src="./images/photo1.png" alt="" />
+            <img src="./images/photo1.png" alt="Десктопные приложения" />
           </li>
           <li>
-            <img src="./images/photo2.png" alt="" />
+            <img src="./images/photo2.png" alt="Мобильные приложения" />
           </li>
           <li>
-            <img src="./images/photo3.png" alt="" />
+            <img src="./images/photo3.png" alt="Дизайнерские решения" />
           </li>
         </ul>
       </section>
@@ -113,25 +113,25 @@
           <h2 class="team-title">Наша команда</h2>
           <ul class="list">
             <li>
-              <img src="./images/team1.png" alt="" />
+              <img src="./images/team1.png" alt="Игорь Демьяненко" width="270" />
               <h3 class="team-name-title">Игорь Демьяненко</h3>
               <p class="team-description">Product Designer</p>
             </li>
 
             <li>
-              <img src="./images/team2.png" alt="" />
+              <img src="./images/team2.png" alt="Ольга Репина" width="270" />
               <h3 class="team-name-title">Ольга Репина</h3>
               <p class="team-description">Frontend Developer</p>
             </li>
 
             <li>
-              <img src="./images/team3.png" alt="" />
+              <img src="./images/team3.png" alt="Николай Тарасов" width="270" />
               <h3 class="team-name-title">Николай Тарасов</h3>
               <p class="team-description">Marketing</p>
             </li>
 
             <li>
-              <img src="./images/team4.png" alt="" />
+              <img src="./images/team4.png" alt="Михаил Ермаков" width="270" />
               <h3 class="team-name-title">Михаил Ермаков</h3>
               <p class="team-description">UI Designer</p>
             </li>
@@ -155,10 +155,10 @@
               >
             </li>
             <li>
-              <a class="contact-mail" href="mailto:info@devstudio.com">info@example.com</a>
+              <a class="contact-list" href="mailto:info@devstudio.com">info@example.com</a>
             </li>
             <li>
-              <a class="contact-tel" href="tel:+380961111111">+380991111111</a>
+              <a class="contact-list" href="tel:+380961111111">+380991111111</a>
             </li>
           </ul>
         </address>
