--- a/index.html
+++ b/index.html
@@ -25,97 +25,103 @@
   <body>
     <!--Header-->
     <header class="header">
-      <nav class="header-nav">
-        <a class="header-logo link link-studio" lang="en" href="./index.html">
-          <span class="color-log">Web</span>Studio</a
-        >
+      <div class="container">
+        <nav class="header-nav">
+          <a class="header-logo link link-studio" lang="en" href="./index.html">
+            <span class="color-log">Web</span>Studio</a
+          >
 
-        <ul class="list header-list" lang="ru">
-          <li class="header-item">
-            <a class="link header-link active-page" href="">Студия</a>
-          </li>
-          <li class="header-item">
-            <a class="link header-link" href="./portfolio.html">Портфолио</a>
-          </li>
-          <li class="header-item">
-            <a class="link header-link" href="">Контакты</a>
-          </li>
-        </ul>
-      </nav>
+          <ul class="list header-list" lang="ru">
+            <li class="header-item">
+              <a class="link header-link active-page" href="">Студия</a>
+            </li>
+            <li class="header-item">
+              <a class="link header-link" href="./portfolio.html">Портфолио</a>
+            </li>
+            <li class="header-item">
+              <a class="link header-link" href="">Контакты</a>
+            </li>
+          </ul>
+        </nav>
 
-      <!--contacts sections -->
-      <div>
-        <a class="header-contact" href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <!--contacts sections -->
+        <div>
+          <a class="header-contact" href="mailto:info@devstudio.com">info@devstudio.com</a>
+        </div>
+        <div>
+          <a class="header-contact" href="tel:+380961111111">+380961111111</a>
+        </div>
+        <!--section button-->
+        <section class="section-banner">
+          <h1 class="section-title">
+            Эффективные решения <br />
+            для вашего бизнеса
+          </h1>
+
+          <!--button-->
+          <button type="button" class="button">Заказать услугу</button>
+        </section>
       </div>
-      <div>
-        <a class="header-contact" href="tel:+380961111111">+380961111111</a>
-      </div>
-      <!--section button-->
-      <section class="section-banner">
-        <h1 class="section-title">
-          Эффективные решения <br />
-          для вашего бизнеса
-        </h1>
-
-        <!--button-->
-        <button type="button" class="button">Заказать услугу</button>
-      </section>
     </header>
 
     <!--section description-->
     <main>
       <section class="hero">
-        <h2 class="visually-hidden" hidden>CEO</h2>
+        <div class="container">
+          <h2 class="visually-hidden" hidden>CEO</h2>
 
-        <ul class="list hero-list">
-          <li class="hero-item">
-            <h2 class="hero-title">Внимание к деталям</h2>
-            <p class="hero-after-title">
-              Идейные соображения, а также начало повседневной работы по формированию позиции.
-            </p>
-          </li>
+          <ul class="list hero-list">
+            <li class="hero-item">
+              <h2 class="hero-title">Внимание к деталям</h2>
+              <p class="hero-after-title">
+                Идейные соображения, а также начало повседневной работы по формированию позиции.
+              </p>
+            </li>
 
-          <li class="hero-item">
-            <h2 class="hero-title">Пунктуальность</h2>
-            <p class="hero-after-title">
-              Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
-            </p>
-          </li>
+            <li class="hero-item">
+              <h2 class="hero-title">Пунктуальность</h2>
+              <p class="hero-after-title">
+                Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
+              </p>
+            </li>
 
-          <li class="hero-item">
-            <h2 class="hero-title">Планирование</h2>
-            <p class="hero-after-title">
-              Равным образом консультация с широким активом в значительной степени обуславливает.
-            </p>
-          </li>
+            <li class="hero-item">
+              <h2 class="hero-title">Планирование</h2>
+              <p class="hero-after-title">
+                Равным образом консультация с широким активом в значительной степени обуславливает.
+              </p>
+            </li>
 
-          <li class="hero-item">
-            <h2 class="hero-title">Современные технологии</h2>
-            <p class="hero-after-title">
-              Значимость этих проблем настолько очевидна, что реализация плановых заданий.
-            </p>
-          </li>
-        </ul>
+            <li class="hero-item">
+              <h2 class="hero-title">Современные технологии</h2>
+              <p class="hero-after-title">
+                Значимость этих проблем настолько очевидна, что реализация плановых заданий.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
 
       <!--Our work section-->
       <section class="section-work">
-        <h2 class="work-title">Чем мы занимаемся</h2>
-        <ul class="list">
-          <li>
-            <img src="./images/photo1.png" alt="Десктопные приложения" />
-          </li>
-          <li>
-            <img src="./images/photo2.png" alt="Мобильные приложения" />
-          </li>
-          <li>
-            <img src="./images/photo3.png" alt="Дизайнерские решения" />
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="work-title">Чем мы занимаемся</h2>
+          <ul class="list">
+            <li class="team-photo">
+              <img src="./images/photo1.png" alt="Десктопные приложения" />
+            </li class="team-photo">
+            <li>
+              <img src="./images/photo2.png" alt="Мобильные приложения" />
+            </li>
+            <li class="team-photo">
+              <img src="./images/photo3.png" alt="Дизайнерские решения" />
+            </li>
+          </ul>
+        </div>
       </section>
 
       <!--section team-->
-      <div>
+      <div class="container">
         <section>
           <h2 class="team-title">Наша команда</h2>
           <ul class="list">
@@ -148,27 +154,29 @@
     </main>
     <!--footer section-->
     <footer class="section-footer">
-      <a class="link-footer" href="/index.html">Web<span class="color-footer">Studio</span></a>
-      <div>
-        <address>
-          <ul class="list">
-            <li>
-              <a
-                class="address"
-                href="https://goo.gl/maps/Afqt2rmy2DsJCTwLA"
-                target="_blank"
-                rel="noopener noreferre"
-                >г. Киев, пр-т Леси Украинки, 26</a
-              >
-            </li>
-            <li>
-              <a class="contact-list" href="mailto:info@devstudio.com">info@example.com</a>
-            </li>
-            <li>
-              <a class="contact-list" href="tel:+380961111111">+380991111111</a>
-            </li>
-          </ul>
-        </address>
+      <div class="container">
+        <a class="link-footer" href="/index.html">Web<span class="color-footer">Studio</span></a>
+        <div>
+          <address>
+            <ul class="list">
+              <li>
+                <a
+                  class="address"
+                  href="https://goo.gl/maps/Afqt2rmy2DsJCTwLA"
+                  target="_blank"
+                  rel="noopener noreferre"
+                  >г. Киев, пр-т Леси Украинки, 26</a
+                >
+              </li>
+              <li>
+                <a class="contact-list" href="mailto:info@devstudio.com">info@example.com</a>
+              </li>
+              <li>
+                <a class="contact-list" href="tel:+380961111111">+380991111111</a>
+              </li>
+            </ul>
+          </address>
+        </div>
       </div>
     </footer>
   </body>
